# visual-search-image-gen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  gui.py  pyproject.toml  script.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_script.py
